feat: nav bar with 5 fragments

--- a/app/src/main/res/values/themes.xml
+++ b/app/src/main/res/values/themes.xml
@@ -6,4 +6,10 @@
     </style>
 
     <style name="Theme.Clarity" parent="Base.Theme.Clarity" />
+
+    <style name="RoundFAB" parent="">
+        <item name="cornerFamily">rounded</item>
+        <item name="android:radius">40dp</item>
+    </style>
+
 </resources>
