--- a/app/src/main/res/layout/alert_box.xml
+++ b/app/src/main/res/layout/alert_box.xml
@@ -38,7 +38,7 @@
 
         <TextView
             android:id="@+id/action_description"
-            android:layout_width="wrap_content"
+            android:layout_width="220dp"
             android:layout_height="wrap_content"
             android:layout_marginTop="16dp"
             android:text="description of action"
@@ -47,35 +47,39 @@
             app:layout_constraintStart_toStartOf="@+id/warning_msg"
             app:layout_constraintTop_toBottomOf="@+id/warning_msg" />
 
+
         <LinearLayout
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
+            android:layout_width="match_parent"
+            android:layout_height="match_parent"
             android:orientation="horizontal"
-            android:layout_marginTop="10dp"
+            android:layout_marginTop="20dp"
             app:layout_constraintBottom_toBottomOf="parent"
             app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintStart_toStartOf="parent"
             app:layout_constraintTop_toBottomOf="@+id/action_description">
 
+
             <com.google.android.material.button.MaterialButton
                 android:id="@+id/buttonCancelAction"
-                android:layout_width="wrap_content"
+                android:layout_width="130dp"
                 android:layout_height="wrap_content"
                 android:layout_weight="1"
-                android:backgroundTint="@color/white"
+                android:background="@color/profile_bg"
                 android:text="@string/oops"
-                android:textColor="@color/profile_bg"
-                android:textSize="12sp" />
+                android:textColor="@color/white"
+                android:textSize="11sp"
+                app:cornerRadius="0dp" />
 
             <com.google.android.material.button.MaterialButton
                 android:id="@+id/buttonResetCalendar"
-                android:layout_width="wrap_content"
+                android:layout_width="130dp"
                 android:layout_height="wrap_content"
                 android:layout_weight="1"
                 android:backgroundTint="@color/white"
-                android:text="Reset Calenda"
+                android:text="Reset Calendar"
                 android:textColor="#FF9292"
-                android:textSize="12sp" />
+                android:textSize="11sp"
+                app:cornerRadius="0dp"/>
 
         </LinearLayout>
 
