--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -3,5 +3,7 @@
     <color name="black">#FF000000</color>
     <color name="white">#FFFFFFFF</color>
     <color name="profile_bg">#967ADC</color>
+    <color name="accent_1">#6339CD</color>
+    <color name="accent_2">#967ADC</color>
     <color name="red">#FF0000</color>
 </resources>
