--- a/app/src/main/res/drawable/ic_launcher_foreground.xml
+++ b/app/src/main/res/drawable/ic_launcher_foreground.xml
@@ -1,30 +1,24 @@
 <vector xmlns:android="http://schemas.android.com/apk/res/android"
-    xmlns:aapt="http://schemas.android.com/aapt"
     android:width="108dp"
     android:height="108dp"
-    android:viewportWidth="108"
-    android:viewportHeight="108">
-    <path android:pathData="M31,63.928c0,0 6.4,-11 12.1,-13.1c7.2,-2.6 26,-1.4 26,-1.4l38.1,38.1L107,108.928l-32,-1L31,63.928z">
-        <aapt:attr name="android:fillColor">
-            <gradient
-                android:endX="85.84757"
-                android:endY="92.4963"
-                android:startX="42.9492"
-                android:startY="49.59793"
-                android:type="linear">
-                <item
-                    android:color="#44000000"
-                    android:offset="0.0" />
-                <item
-                    android:color="#00000000"
-                    android:offset="1.0" />
-            </gradient>
-        </aapt:attr>
-    </path>
-    <path
-        android:fillColor="#FFFFFF"
-        android:fillType="nonZero"
-        android:pathData="M65.3,45.828l3.8,-6.6c0.2,-0.4 0.1,-0.9 -0.3,-1.1c-0.4,-0.2 -0.9,-0.1 -1.1,0.3l-3.9,6.7c-6.3,-2.8 -13.4,-2.8 -19.7,0l-3.9,-6.7c-0.2,-0.4 -0.7,-0.5 -1.1,-0.3C38.8,38.328 38.7,38.828 38.9,39.228l3.8,6.6C36.2,49.428 31.7,56.028 31,63.928h46C76.3,56.028 71.8,49.428 65.3,45.828zM43.4,57.328c-0.8,0 -1.5,-0.5 -1.8,-1.2c-0.3,-0.7 -0.1,-1.5 0.4,-2.1c0.5,-0.5 1.4,-0.7 2.1,-0.4c0.7,0.3 1.2,1 1.2,1.8C45.3,56.528 44.5,57.328 43.4,57.328L43.4,57.328zM64.6,57.328c-0.8,0 -1.5,-0.5 -1.8,-1.2s-0.1,-1.5 0.4,-2.1c0.5,-0.5 1.4,-0.7 2.1,-0.4c0.7,0.3 1.2,1 1.2,1.8C66.5,56.528 65.6,57.328 64.6,57.328L64.6,57.328z"
-        android:strokeWidth="1"
-        android:strokeColor="#00000000" />
+    android:viewportWidth="62"
+    android:viewportHeight="67">
+  <group android:scaleX="0.2961194"
+      android:scaleY="0.32"
+      android:translateX="21.8203"
+      android:translateY="22.78">
+    <group>
+      <clip-path
+          android:pathData="M0,0h62v67h-62z"/>
+      <path
+          android:pathData="M20.923,33.203C20.875,21.95 31.031,13.154 42.112,15.363C50.498,16.963 56.662,24.844 56.579,33.203C56.662,41.563 50.5,49.447 42.112,51.044C31.031,53.25 20.872,44.456 20.923,33.203ZM36.476,33.203C36.439,36.945 38.381,40.755 42.112,42.207C44.668,43.235 47.815,42.926 50.205,41.302C55.87,37.552 55.87,28.855 50.205,25.104C46.793,22.758 41.946,23.239 39.188,26.135C37.27,28.095 36.492,30.61 36.476,33.203Z"
+          android:fillColor="#967ADC"/>
+      <path
+          android:pathData="M61.659,50.652C52.383,68.898 27.93,72.208 12.819,58.869C-6.588,41.743 -0.456,9.97 24.099,1.648C37.211,-2.883 52.976,2.156 60.034,14.08C60.957,15.626 60.452,17.626 58.907,18.549C57.636,19.312 56.072,19.094 55.028,18.155C51.3,14.992 46.801,12.7 41.957,12.01C28.289,9.809 15.494,20.377 16.089,34.363C16.618,47.493 28.858,56.826 41.723,54.813C45.079,54.279 48.303,53.081 51.224,51.202C53.075,50.051 54.773,48.588 56.313,47.042L56.477,46.88C59.151,44.381 63.202,47.374 61.659,50.655V50.652Z"
+          android:fillColor="#967ADC"/>
+      <path
+          android:pathData="M17.179,54.797C15.261,57.768 12.916,60.378 10.446,62.88C8.943,64.404 7.299,65.784 5.26,66.571C2.149,67.719 -0.925,64.565 0.258,61.5C1.068,59.47 2.468,57.843 4.01,56.359C6.543,53.919 9.179,51.608 12.173,49.726C15.51,47.734 19.193,51.538 17.176,54.797H17.179Z"
+          android:fillColor="#967ADC"/>
+    </group>
+  </group>
 </vector>
