--- a/app/src/main/res/drawable/tag_unselect_rectangle.xml
+++ b/app/src/main/res/drawable/tag_unselect_rectangle.xml
@@ -1,10 +1,9 @@
 <?xml version="1.0" encoding="utf-8"?>
-<!-- tag_unselect_rectangle.xml -->
+<!-- button_background.xml -->
 <shape xmlns:android="http://schemas.android.com/apk/res/android"
     android:shape="rectangle">
-    <stroke
-        android:width="2dp"
-    android:color="@android:color/black" />
-    <corners android:radius="4dp" />
+    <solid android:color="#FFFFFF"/>
+    <corners android:radius="24dp"/>
 </shape>
+
 
