--- a/app/src/main/res/layout/fragment_career_tag.xml
+++ b/app/src/main/res/layout/fragment_career_tag.xml
@@ -8,7 +8,8 @@
     <androidx.recyclerview.widget.RecyclerView
         android:id="@+id/Career"
         android:layout_width="match_parent"
-        android:layout_height="match_parent" />
+        android:layout_height="match_parent"
+        android:background="#FDFAFF"/>
 
 
 </FrameLayout>
