--- a/app/src/main/res/layout/fragment_discover.xml
+++ b/app/src/main/res/layout/fragment_discover.xml
@@ -6,24 +6,8 @@
     xmlns:app="http://schemas.android.com/apk/res-auto"
     tools:context=".NavBarFragments.Discover">
 
-    <!-- Existing content in the parent FrameLayout -->
-    <!--    <TextView-->
-    <!--        android:layout_width="match_parent"-->
-    <!--        android:layout_height="match_parent"-->
-    <!--        android:text="Discover" />-->
-
-
-
-    <!--    <com.google.android.material.navigation.NavigationView-->
-    <!--        android:id = "@+id/tag_navigation_bar"-->
-    <!--        android:layout_width="match_parent"-->
-    <!--        android:layout_height="56dp"-->
-    <!--        app:menu = "@menu/discover_tags_menu"/>-->
-
-
-
     <FrameLayout
-        android:id="@+id/career_tags"
+        android:id="@+id/tags"
         android:layout_width="match_parent"
         android:layout_height="match_parent"
         android:layout_marginTop="110dp"> <!-- Adjust the top margin as needed -->
@@ -40,8 +24,8 @@
         android:layout_marginTop="18dp"
         android:src="@drawable/clarity_logo" />
 
-    <Button
-        android:id="@+id/Career"
+    <androidx.appcompat.widget.AppCompatButton
+        android:id="@+id/Button_Career"
         android:layout_width="59dp"
         android:layout_height="26dp"
         android:layout_marginStart="18dp"
@@ -52,16 +36,17 @@
         android:paddingEnd="0.1dp"
         android:paddingBottom="0.1dp"
         android:text="Career"
+        android:textColor="@color/white"
         android:textSize="12sp" />
 
-    <Button
-        android:id="@+id/Campus_life"
+    <androidx.appcompat.widget.AppCompatButton
+        android:id="@+id/Button_Campus_life"
         android:layout_width="wrap_content"
         android:layout_height="26dp"
-        android:layout_marginStart="105dp"
         android:layout_marginTop="70dp"
+        android:layout_marginStart="90dp"
         android:textColor="#967ADC"
-        android:background="?android:attr/selectableItemBackground"
+        android:background="@drawable/tag_unselect_rectangle"
         android:paddingStart="0.1dp"
         android:paddingTop="0.1dp"
         android:paddingEnd="0.1dp"
@@ -69,14 +54,14 @@
         android:text="Campus Life"
         android:textSize="12sp" />
 
-    <Button
-        android:id="@+id/Fifth_row"
+    <androidx.appcompat.widget.AppCompatButton
+        android:id="@+id/Button_Fifth_row"
         android:layout_width="73dp"
         android:layout_height="26dp"
-        android:layout_marginStart="215dp"
+        android:layout_marginStart="192dp"
         android:layout_marginTop="70dp"
         android:textColor="#967ADC"
-        android:background="?android:attr/selectableItemBackground"
+        android:background="@drawable/tag_unselect_rectangle"
         android:paddingStart="0.1dp"
         android:paddingTop="0.1dp"
         android:paddingEnd="0.1dp"
@@ -84,20 +69,20 @@
         android:text="Fifth Row"
         android:textSize="12sp" />
 
-    <Button
-        android:id="@+id/Competition"
-        android:layout_width="wrap_content"
+    <androidx.appcompat.widget.AppCompatButton
+        android:id="@+id/Button_Competition"
+        android:layout_width="95dp"
         android:layout_height="26dp"
-        android:layout_marginStart="315dp"
+        android:layout_marginStart="280dp"
         android:layout_marginTop="70dp"
         android:layout_marginEnd="18dp"
-        android:textColor="#967ADC"
-        android:background="?android:attr/selectableItemBackground"
+        android:background="@drawable/tag_unselect_rectangle"
         android:paddingStart="0.1dp"
         android:paddingTop="0.1dp"
         android:paddingEnd="0.1dp"
         android:paddingBottom="0.1dp"
         android:text="Competition"
+        android:textColor="#967ADC"
         android:textSize="12sp" />
 
 
