Created styles for light and dark mode

--- a/app/src/main/res/layout/alert_box.xml
+++ b/app/src/main/res/layout/alert_box.xml
@@ -28,7 +28,7 @@
             android:layout_marginTop="4dp"
             android:gravity="center_horizontal|top"
             android:text="@string/profile_alert"
-            android:textColor="@color/profile_bg"
+            android:textColor="@color/purple"
             android:textSize="16sp"
             android:textStyle="bold"
             app:layout_constraintEnd_toEndOf="@+id/imageView"
@@ -64,7 +64,7 @@
                 android:layout_width="130dp"
                 android:layout_height="wrap_content"
                 android:layout_weight="1"
-                android:background="@color/profile_bg"
+                android:background="@color/purple"
                 android:text="@string/oops"
                 android:textColor="@color/white"
                 android:textSize="11sp"
