--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -2,5 +2,14 @@
 <resources>
     <color name="black">#FF000000</color>
     <color name="white">#FFFFFFFF</color>
-    <color name="profile_bg">#967ADC</color>
+    <color name="purple">#967ADC</color>
+    <color name="off_white">#FFFCFA</color>
+    <color name="dark_purple">#6339CD</color>
+    <color name="light_grey">#F2F3F6</color>
+    <color name="dark_grey">#212121</color>
+    <color name="grey">#A4A7B0</color>
+    <color name="bg_dark">#0E0D0D</color>
+    <color name="purplish_grey">#232232</color>
+    <color name="wolf_grey">#434A54</color>
+    <color name="purple_tint">#FDFAFF</color>
 </resources>
