--- a/app/src/main/res/drawable/alert_button_border.xml
+++ b/app/src/main/res/drawable/alert_button_border.xml
@@ -5,6 +5,6 @@
         android:color="@android:color/transparent"/>
     <stroke
         android:width="0.5pt"
-        android:color="@color/profile_bg"/>
+        android:color="@color/purple"/>
 
 </shape>
