--- a/app/src/main/res/layout/profile_interest.xml
+++ b/app/src/main/res/layout/profile_interest.xml
@@ -1,20 +1,9 @@
-<?xml version="1.0" encoding="utf-8"?>
-<androidx.appcompat.widget.LinearLayoutCompat xmlns:android="http://schemas.android.com/apk/res/android"
-    xmlns:tools="http://schemas.android.com/tools"
+<TextView xmlns:android="http://schemas.android.com/apk/res/android"
+    android:id="@+id/interestCategoryNameTextView"
     android:layout_width="wrap_content"
     android:layout_height="wrap_content"
-    android:orientation="vertical">
-
-    <ImageView
-        android:id="@+id/interestIconImageView"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        tools:src="@tools:sample/avatars" />
-
-    <TextView
-        android:id="@+id/interestNameTextView"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:text="TextView"
-        android:layout_gravity="center"/>
-</androidx.appcompat.widget.LinearLayoutCompat>
+    android:padding="8dp"
+    android:background="@drawable/interest_tags"
+    android:textColor="@color/white"
+    android:textSize="14sp"
+    android:text="text" />
